--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,7 +38,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:text="MÍNIMA"
+            android:text="CONECTA"
             android:textAlignment="center"
             android:textColor="#87644B"
             android:textSize="25sp"
