--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -6,75 +6,94 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fbf1e9"
+    android:background="@drawable/mesafondo"
     tools:context=".PedidoActivity">
+
+    <TextView
+        android:id="@+id/tvTituloMesa"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="Mesa #02"
+        android:textColor="#000000"
+        android:textSize="38sp"
+        android:textStyle="bold"
+        android:shadowColor="#000000"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="4"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:orientation="vertical"
-        android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
-
-        <TextView
-            android:id="@+id/tvTituloMesa"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:text="Mesa #02"
-            android:textAlignment="center"
-            android:textColor="#87644b"
-            android:textSize="30sp"
-            android:textStyle="bold" />
+        android:elevation="10dp"
+        android:padding="20dp"
+        android:layout_margin="24dp"
+        app:layout_constraintTop_toBottomOf="@id/tvTituloMesa"
+        app:layout_constraintBottom_toTopOf="@id/layoutBotones">
 
         <TextView
             android:id="@+id/tvTotal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Total: S/ 0.00"
-            android:textSize="24sp"
+            android:textSize="26sp"
             android:textAlignment="viewEnd"
-            android:textColor="#d50000"
+            android:textColor="#ffffff"
             android:textStyle="bold"
+            android:layout_marginBottom="10dp"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="#DDDDDD"
             android:layout_marginBottom="10dp"/>
 
         <ListView
             android:id="@+id/lvDetallePedido"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="#ffffff"
-            android:divider="#87644b"
+            android:layout_height="match_parent"
+            android:divider="#E0E0E0"
             android:dividerHeight="1dp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="16dp"
-            android:weightSum="2">
 
-            <Button
-                android:id="@+id/btnAgregar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="AGREGAR"
-                android:backgroundTint="#87644b"
-                android:layout_marginEnd="8dp"/>
+    </LinearLayout>
 
-            <Button
-                android:id="@+id/btnFinalizar"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="FINALIZAR"
-                android:backgroundTint="#333333"
-                android:layout_marginStart="8dp"/>
-        </LinearLayout>
+    <LinearLayout
+        android:id="@+id/layoutBotones"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:weightSum="2"
+        android:padding="20dp"
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnAgregar"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_weight="1"
+            android:text="AGREGAR"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:backgroundTint="#87644b"
+            android:layout_marginEnd="8dp"/>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnFinalizar"
+            android:layout_width="0dp"
+            android:layout_height="60dp"
+            android:layout_weight="1"
+            android:text="FINALIZAR"
+            android:textColor="#FFFFFF"
+            android:textStyle="bold"
+            android:background="#ffffff"
+            android:backgroundTint="#333333"
+            android:layout_marginStart="8dp"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
