--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -6,8 +6,23 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/mesafondo"
     tools:context=".PedidoActivity">
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/cafe_pedido"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#E0000000"/>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/tvTituloMesa"
@@ -15,13 +30,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="Mesa #02"
-        android:textColor="#000000"
+        android:textColor="@color/white"
         android:textSize="38sp"
         android:textStyle="bold"
-        android:shadowColor="#000000"
-        android:shadowDx="2"
-        android:shadowDy="2"
-        android:shadowRadius="4"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -43,7 +54,7 @@
             android:text="Total: S/ 0.00"
             android:textSize="26sp"
             android:textAlignment="viewEnd"
-            android:textColor="#ffffff"
+            android:textColor="@color/white"
             android:textStyle="bold"
             android:layout_marginBottom="10dp"/>
 
