--- a/app/src/main/res/layout/activity_mesas.xml
+++ b/app/src/main/res/layout/activity_mesas.xml
@@ -1,72 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/main"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     tools:context=".MesasActivity">
 
-    <ImageView
+    <FrameLayout
         android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/mesas_cafeteria" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#E0000000"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MESAS"
+                android:textSize="32sp"
+                android:textStyle="bold"
+                android:layout_marginBottom="20dp"
+                android:textColor="@color/white"/>
+
+            <Button
+                android:id="@+id/btnMesa1"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Mesa #1 - Ocupada"
+                android:backgroundTint="#610909"
+                android:textColor="#FFFFFF" />
+
+            <Button
+                android:id="@+id/btnMesa2"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Mesa #2 - Libre"
+                android:backgroundTint="#026209"
+                android:textColor="#FFFFFF" />
+
+            <Button
+                android:id="@+id/btnMesa3"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Mesa #3 - Ocupada"
+                android:backgroundTint="#610808"
+                android:textColor="#FFFFFF" />
+        </LinearLayout>
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_marginTop="40dp"
+            android:background="@android:color/transparent"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:title="" />
+
+    </FrameLayout>
+
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/mesas_cafeteria"
-        />
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#E0000000"/>
+        android:layout_gravity="start"
+        android:background="#FFFFFF"
+        app:itemIconTint="#87644b"
+        app:itemTextColor="#121212"
+        app:headerLayout="@layout/nav_header"
+        app:menu="@menu/menu_cafeteria" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="MESAS"
-            android:textSize="32sp"
-            android:textStyle="bold"
-            android:layout_marginBottom="20.dp"
-            android:textColor="@color/white"/>
-
-        <Button
-            android:id="@+id/btnMesa1"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10.dp"
-            android:text="Mesa #1 - Ocupada"
-            android:backgroundTint="#610909"
-            android:textColor="#FFFFFF" />
-
-        <Button
-            android:id="@+id/btnMesa2"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10.dp"
-            android:text="Mesa #2 - Libre"
-            android:backgroundTint="#026209"
-            android:textColor="#FFFFFF" />
-
-        <Button
-            android:id="@+id/btnMesa3"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10.dp"
-            android:text="Mesa #3 - Ocupada"
-            android:backgroundTint="#610808"
-            android:textColor="#FFFFFF" >
-
-        </Button>
-
-
-
-    </LinearLayout>
-
-
-
-</FrameLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
