--- a/app/src/main/res/layout/activity_pedido.xml
+++ b/app/src/main/res/layout/activity_pedido.xml
@@ -29,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:text="Mesa #02"
+        android:text="Pedido"
         android:textColor="@color/white"
         android:textSize="38sp"
         android:textStyle="bold"
@@ -44,6 +44,7 @@
         android:elevation="10dp"
         android:padding="20dp"
         android:layout_margin="24dp"
+        android:background="@color/white"
         app:layout_constraintTop_toBottomOf="@id/tvTituloMesa"
         app:layout_constraintBottom_toTopOf="@id/layoutBotones">
 
@@ -54,7 +55,7 @@
             android:text="Total: S/ 0.00"
             android:textSize="26sp"
             android:textAlignment="viewEnd"
-            android:textColor="@color/white"
+            android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginBottom="10dp"/>
 
